deploy/kubernetes/production-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-ingress
  namespace: production
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
spec:
  tls:
    - hosts:
      - app.workbenchdata.com
      secretName: app.workbenchdata.com-secret
  rules:
    - host: app.workbenchdata.com
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 80
